Add Textfile creation, misc changes
Feature Changes:
- Textfile now won't save if they have forward or backward slashes in their filenames
- Filepath string sanitation handles any amount of extra slashes, so you can slap 40 backslashes (or forward) in the location when filling the Textfile new/edit forms, and they will be ignored
- Errors caused by trying to save with invalid file name or path (e.g. using illegal characters as dictated by the OS) now handled

Housekeeping Changes:
- Moved predict_modifications method into new Helper class for organization purposes
- Removed redundant filepath name sanitation in Writer.rb
- Added a conditional check in Updater.rb to avoid unneeded looping when checking for external file renames/movements

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
-<%= render partial: "/shared/top", locals: {title: "Home"} %>
+<% title = "Home" %>
+
+<% extra_nav_items = [] %>
+<% extra_nav_items << link_to("Create .txt File", new_textfile_path) %>
+
+<%= render partial: "/shared/top", locals: {title: title, extra_nav_items: extra_nav_items} %>
 <div id="parent">
   <%= render partial: "/shared/textfile_feed", locals: {textfiles: @textfiles} %>
   <%= render partial: "/shared/tags", locals: {tags: @tags} %>
