Rename POROs/methods, convert PORO instance methods to class methods
Class methods used now to avoid having to create object *then* call method.

Renames:
- Updater -> ModelInstanceRefresher
- Scanner -> DiskScanner
- Writer -> DiskWriter
- ModelInstanceUpdater#tag_transfer -> #transfer_tags

--- a/app/views/textfiles/show.html.erb
+++ b/app/views/textfiles/show.html.erb
@@ -1,5 +1,5 @@
 <% begin %>
-  <% contents = StringConstructor.new.bbcode_to_html(@textfile.contents) %>
+  <% contents = StringConstructor.bbcode_to_html(@textfile.contents) %>
   <% # Probably will break in Linux. %>
   <% contents_list = contents.split("\n") %>
 <% rescue ArgumentError %>
