--- a/app/views/users/view_file_changes_for.html.erb
+++ b/app/views/users/view_file_changes_for.html.erb
@@ -1,5 +1,5 @@
 <div id="new_user_background">
-  <span id="new_user_background_contents"><%= StringConstructor.new.lorem_ipsum %></span>
+  <span id="new_user_background_contents"><%= StringConstructor.lorem_ipsum %></span>
 </div>
 
 <div class="forced_popup_wrapper">
