--- a/app/views/shared/_text_preview.html.erb
+++ b/app/views/shared/_text_preview.html.erb
@@ -1,4 +1,4 @@
-<% snip = StringConstructor.new.snippet(textfile.contents) %>
+<% snip = StringConstructor.snippet(textfile.contents) %>
 
 <% snip.split("\n").each do |line| %>
   <%= raw line %><br>
