Add Textfile deletion, fix name error during home page refresh, code formatting changes
On the navigation bar in the Textfile edit view, there is now a link to
delete the file. Deletes both the model instance and the local file.

Fixed bug in Helper#predict_modifications where DiskScanner wasn't being
referenced properly.

Minor misc backend changes that don't change functionality.

--- a/app/views/textfiles/edit.html.erb
+++ b/app/views/textfiles/edit.html.erb
@@ -1,3 +1,8 @@
 <% title = "Editing '#{@textfile.name}'" %>
-<%= render partial: "/shared/top", locals: {title: title} %>
+
+<% extra_nav_items = [] %>
+<% message = "Are you sure you want to delete this file? It will be removed from local drive." %>
+<% extra_nav_items << link_to("Delete File", textfile_path(@textfile), method: :delete, data: {Confirm: message}) %>
+
+<%= render partial: "/shared/top", locals: {title: title, extra_nav_items: extra_nav_items} %>
 <%= render partial: 'form' %>
