--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -2,7 +2,8 @@
 
 <% extra_nav_items = [] %>
 <% extra_nav_items << link_to("Toggle All Previews", "#", {id: "toggle_all_previews_button"}) %>
-<% extra_nav_items << link_to("Delete Tag", tag_path(@tag), method: :delete, data: {Confirm: "Are you sure you want to delete this tag? Files will remain."}) %>
+<% message = "Are you sure you want to delete this tag? Files will remain." %>
+<% extra_nav_items << link_to("Delete Tag", tag_path(@tag), method: :delete, data: {Confirm: message}) %>
 <% extra_nav_items << link_to("Rename Tag", "#", {id: "rename_tag_link", class: "popup_link"}) %>
 
 <%= render partial: "/shared/top", locals: {title: title, extra_nav_items: extra_nav_items} %>
