Add tag categories, bug fixes, minor changes
Feature Implementations:
- Tags can now be assigned categories. Unlike tags, categories are
case-sensitive
- Creating a tag without a set category defaults to the category
"Unorganized"
- Number of archived files and total files under each tag shown on
right-hand tag list
- All untagged files can be accessed under Unorganized > Untagged

Bug Fixes:
- Fixed error caused by creating a tag that already existed

Feature Changes:
- New files discovered on local drive are untagged instead of given the
tag "new"
- Small input box now a set width of 400px
- On the tag editing page, "Rename Tag" changed to "Tag Properties" to
accommodate categories
- Some small input boxes now have centered text

Code Changes:
- Renamed Tag#update to Tag#change_tagged and Tag#rename to
Tag#change_properties. Both are associated with the GET method Tag#edit
- Home button on topbar now links to User#index instead of User#show, so
that the app won't crash if all models are deleted

--- a/app/assets/stylesheets/shared/general.scss
+++ b/app/assets/stylesheets/shared/general.scss
@@ -79,7 +79,7 @@ h2, h3, .main_text, .minor_text, .small_input_box, .large_input_box,
 }
 
 .small_input_box{
-  width: 70%;
+  width: 400px;
   margin-top: 5px;
 }
 
