--- a/app/views/shared/_top.html.erb
+++ b/app/views/shared/_top.html.erb
@@ -1,5 +1,5 @@
 <% nav_items = [] %>
-<% nav_items << link_to("Home", user_path(@user)) %>
+<% nav_items << link_to("Home", users_path) %>
 <% nav_items << link_to("Preferences", "#", id: "preferences_link", class: "popup_link") %>
 
 <div id="header_container">
