--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,7 +9,7 @@
       <% # does, but I guess that's not easy to do in Rails. I might create it myself later. %>
       <h3><%= f.label :home, "Location of Files" %></h3>
       <p class="main_text">
-        <%= f.text_field :home, class: "small_input_box" %><br>
+        <%= f.text_field :home, class: "small_input_box justify_center" %><br>
         <span class="minor_text">Example: C:\windows\system32</span>
       </p>
       <h3>Display Mode for .txt Files</h3>
