--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -4,11 +4,11 @@
 <% extra_nav_items << link_to("Toggle All Previews", "#", {id: "toggle_all_previews_button"}) %>
 <% message = "Are you sure you want to delete this tag? Files will remain." %>
 <% extra_nav_items << link_to("Delete Tag", tag_path(@tag), method: :delete, data: {Confirm: message}) %>
-<% extra_nav_items << link_to("Rename Tag", "#", {id: "rename_tag_link", class: "popup_link"}) %>
+<% extra_nav_items << link_to("Tag Properties", "#", {id: "rename_tag_link", class: "popup_link"}) %>
 
 <%= render partial: "/shared/top", locals: {title: title, extra_nav_items: extra_nav_items} %>
 
-<%= form_tag(url_for(:controller => "tags", :action => "update"), :method => "post") do |f| %>
+<%= form_tag(url_for(:controller => "tags", :action => "change_tagged"), :method => "post") do |f| %>
   <div id="center">
     <%= render partial: "mass_edit" %>
     <p><%= submit_tag "Save", class: "submit_button" %></p>
@@ -16,11 +16,17 @@
 <% end %>
 
 <div id="rename_wrapper" class="optional_popup_wrapper">
-  <%= form_tag(url_for(:controller => "tags", :action => "do_rename"), :method => "post") do |f| %>
+  <%= form_tag(url_for(:controller => "tags", :action => "change_properties"), :method => "post") do |f| %>
     <div id="rename_popup" class="optional_popup">
       <a class="close_button" href="#">X</a>
-      <p class="main_text"><%= label_tag @tag.name, "Tag Name" %></p>
-      <%= text_field_tag @tag.name, @tag.name, class: "small_input_box" %>
+      <p class="main_text">
+        <%= label_tag @tag.name, "Tag Name" %><br>
+        <%= text_field_tag "tag_name", @tag.name, class: "small_input_box justify_center" %>
+      </p>
+      <p class="main_text">
+        <%= label_tag @tag.name, "Tag Category" %><br>
+        <%= text_field_tag "category_name", @category[:name], class: "small_input_box justify_center" %>
+      </p>
       <p><%= submit_tag "Save", class: "submit_button" %></p>
     </div>
   <% end %>
