Add data import/export, major tag- and save-related bug fixes
Data saved in json format; files timestamped. To import data, the home
directory must be the same as the save data's home directory. The newest
data is the one that is imported.

Bug fixes:
- Fixed bug where new tags created in Textfile form not shown in tag
sidebar.
- Fixed bug where new tags created in Create Tag form not shown if added
to existing category.
- Fixed bug where updating Textfile would throw Write To Disk Error
despite no problems with save.
- Fixed bug where Textfile save was missing a check for form data before
setting category for new tags.

This is what I get for committing too early.

--- a/app/views/shared/_top.html.erb
+++ b/app/views/shared/_top.html.erb
@@ -1,5 +1,8 @@
+<% warning = "Imported data will replace existing data. Most recently saved data will be used. Continue?" %>
 <% nav_items = [] %>
 <% nav_items << link_to("Home", users_path) %>
+<% nav_items << link_to("Import Data", import_user_path(@user), data: {Confirm: warning}) %>
+<% nav_items << link_to("Export Data", export_user_path(@user)) %>
 <% nav_items << link_to("Preferences", "#", id: "preferences_link", class: "popup_link") %>
 
 <div id="header_container">
