Code readability changes, remove link to all files at button of Textfile show views
Code is slightly more readable. Added and removed some comments.
Hopefully didn't accidentally delete any actual code.

The "Return to All Files" link at the bottom of all Textfile show views
was redundant, so it's removed.

--- a/app/assets/stylesheets/shared/top.scss
+++ b/app/assets/stylesheets/shared/top.scss
@@ -42,7 +42,6 @@ li.nav_link_right{
 div.fixed-topcenter{
   position: fixed;
   top: 0;
-  // Manually centering
-  left: 50%;
+  left: 50%; // Manually centering
   transform: translate(-50%, 0);
 }
