--- a/app/views/shared/_tags.html.erb
+++ b/app/views/shared/_tags.html.erb
@@ -1,3 +1,7 @@
+<% # For every category, link every tag. %>
+<% # => List total files and archived files for each tag. %>
+<% # => Also link "Untagged" under the "Unorganized" category. %>
+
 <% archived = Textfile.where(archived: true) %>
 <div id="right">
   <div>
