--- a/app/views/shared/_top.html.erb
+++ b/app/views/shared/_top.html.erb
@@ -1,3 +1,5 @@
+<% # Loads header area and navigation bar %>
+
 <% warning = "Imported data will replace existing data. Most recently saved data will be used. Continue?" %>
 <% nav_items = [] %>
 <% nav_items << link_to("Home", users_path) %>
