--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<% # Identical to edit view, except fancy background and no exit button %>
+
 <% wrapper_class = "forced_popup_wrapper" %>
 <% popup_class = "forced_popup" %>
 
