--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
-<% title = "Home" %>
+<% # Loads top, textfile feed with all files, and tag list sidebar %>
 
+<% title = "Home" %>
 <% extra_nav_items = [] %>
 <% extra_nav_items << link_to("Create .txt File", new_textfile_path) %>
 
