--- a/app/views/users/show_untagged.html.erb
+++ b/app/views/users/show_untagged.html.erb
@@ -1,7 +1,8 @@
+<% # Loads top, textfile feed with untagged files, and tag list sidebar %>
+
 <% title = "Untagged Files" %>
 
 <%= render partial: "/shared/top", locals: {title: title} %>
-
 <div id="parent">
   <%= render partial: "/shared/textfile_feed", locals: {textfiles: @textfiles} %>
   <%= render partial: "/shared/tags", locals: {tags: @tags} %>
