--- a/app/views/users/view_file_changes_for.html.erb
+++ b/app/views/users/view_file_changes_for.html.erb
@@ -1,3 +1,7 @@
+<% # Loads fancy background and popup. %>
+<% # => Popup has pages with radio buttons. %>
+<% # => User is asked to verify possible file renames or moves. %>
+
 <div id="new_user_background">
   <span id="new_user_background_contents"><%= StringConstructor.lorem_ipsum %></span>
 </div>
