--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,12 +1,14 @@
+<% # Exists as a popup. Can be forced (no close button) or optional. %>
+<% # For choosing a home, I was planning to have a button that would open a "Choose folder" dialog, %>
+<% # similar to what the ask_open_folder() method in Shoes for Ruby (http://shoesrb.com) %>
+<% # does, but I guess that's not easy to do in Rails. I might create it myself later. %>
+
 <div id="preferences_wrapper" class="<%= wrapper_class %>">
   <%= form_for(@user) do |f| %>
     <div id="preferences_popup" class="<%= popup_class %>">
       <% unless popup_class.include? "forced" %>
         <a class="close_button" href="#">X</a>
       <% end %>
-      <% # I was planning to have a button that would open a "Choose folder" dialog, %>
-      <% # similar to what the ask_open_folder() method in Shoes for Ruby (http://shoesrb.com) %>
-      <% # does, but I guess that's not easy to do in Rails. I might create it myself later. %>
       <h3><%= f.label :home, "Location of Files" %></h3>
       <p class="main_text">
         <%= f.text_field :home, class: "small_input_box justify_center" %><br>
