Add readme and license, bug fixes, style changes
Resolved error where tag not removed from category properly when deleted
due to file deletion.
Fixed a spacing problem at the bottom of the page when viewing a file in
WYSIWYG mode.
Fixed wrong method call in Helper#predict_modifications.
Removed IDs from textfile feed.

--- a/app/views/textfiles/show.html.erb
+++ b/app/views/textfiles/show.html.erb
@@ -26,6 +26,7 @@
     </p>
     <p class="main_text"><b>Location:</b> <%= @textfile.location %></p>
     <hr>
+
     <% contents_list.each do |line| %>
       <% unless @wysiwyg %>
         <p class="main_text" %>
@@ -42,6 +43,10 @@
           <% end %>
         </span>
       <% end %>
+    <% end %>
+
+    <% if @wysiwyg %>
+      <br>
     <% end %>
   </div>
   <%= render partial: "/shared/tags", locals: {tags: @tags} %>
