--- a/app/views/shared/_textfile_feed.html.erb
+++ b/app/views/shared/_textfile_feed.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% textfiles.each do |tf| %>
       <li class="main_text">
-        <h2><%= tf.id %> - <%= link_to(tf.name, textfile_path(tf)) %></h2>
+        <h2><%= link_to(tf.name, textfile_path(tf)) %></h2>
         <ul><li><%= render partial: "/shared/text_preview", locals: {textfile: tf}  %></li></ul>
       </li>
     <% end %>
