--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,6 +1,6 @@
 <% # Loads top, page for mass tag assignment, and a hidden popup for more edit options %>
 
-<% title = "Manage Tag '#{@tag.name.titleize}'" %>
+<% title = "Manage Tag '#{@tag.name}'" %>
 <% extra_nav_items = [] %>
 <% extra_nav_items << link_to("Toggle All Previews", "#", {id: "toggle_all_previews_button"}) %>
 <% message = "Are you sure you want to delete this tag? Files will remain." %>
