--- a/app/assets/stylesheets/shared/general.scss
+++ b/app/assets/stylesheets/shared/general.scss
@@ -99,3 +99,7 @@ h2, h3, .main_text, .minor_text, .small_input_box, .large_input_box,
 div.justify_center, input.justify_center{
   text-align: center;
 }
+
+.hidden{
+  display: none;
+}
